--- a/DASH/contact.html
+++ b/DASH/contact.html
@@ -9,17 +9,17 @@
 <meta name="robots" content="index, follow"/>
 <meta property='og:title' content='Ramon Tenreiro | Sharing creations with you .'/>
 <meta property='og:description' content='Architecture. Painting. Games'/>
-<meta property='og:url' content='https://www.tenreiros.com'/>
+<meta property='og:url' content='https://rtenreiro.github.io/'/>
 <meta property='og:site_name' content='Ramon Tenreiro'/>
 <meta property='og:type' content='website'/>
 <link href="boilerplate.css" rel="stylesheet" type="text/css">
 <!-- Le styles -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="assets/css/docs.css" rel="stylesheet">
-    <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="css/docs.css" rel="stylesheet">
+    <link href="js/google-code-prettify/prettify.css" rel="stylesheet">
     <link rel="apple-touch-icon-precomposed" href="images/favicon32.png">
-    <link rel="shortcut icon" href="images/favicon32.png">
+    <link rel="shortcut icon" href="img/favicon32.png">
 <style css>
 /* contact form
 #####################################################################################
@@ -178,13 +178,13 @@ function validacion(){
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="">
-                <a href="https://wwww.tenreiros.com/index.html">Home</a>
+                <a href="https://rtenreiro.github.io/">Home</a>
               </li>
               <li class="">
-                <a href="https://wwww.tenreiros.com/aboutme.html">About Me</a>
+                <a href="https://rtenreiro.github.io/CV/2022.html">About Me</a>
               </li>
               <li class="">
-                <a href="https://www.tenreiros.com/dash/dash.html">Things I made</a>
+                <a href="https://rtenreiro.github.io/DASH/dash.html">Things I made</a>
               </li>
             </ul>
           </div>
@@ -202,11 +202,11 @@ function validacion(){
 </header>
   
    <div class="row-fluid" class="span12" align="center">
-   <h3>Stay in touch..</h3><h4 class="email"><a href="mailto:ramon@tenreiros.com"> Mail me</a></h4>     
-          <p class="email"><a href="mailto:ramon@tenreiros.com">Email: Ramon Tenreiro</a></p> <h4>Stay in touch with you</h4>    	
+   <h3>Stay in touch..</h3><h4 class="email"><a href="mailto:tenreiroramon@gmail.com"> Mail me</a></h4>     
+          <p class="email"><a href="mailto:tenreiroramon@gmail.com">Email: Ramon Tenreiro</a></p> <h4>Stay in touch with you</h4>    	
       </div><!--cierra direccion-->
    <div class="row-fluid" class="span12" align="center">
-<form name="brv-form" method="post" action="https://www.tenreiros.com" enctype="multipart/form-data">
+<form name="brv-form" method="post" action="https://rtenreiro.github.io/" enctype="multipart/form-data">
 First name <input id="first_name" name="first_name" type="text" class="form-control">
 Name <input id="name" name="name" type="text" class="form-control">
 Email <input id="email" name="email" type="email" class="form-control" placeholder="example@email.com">
@@ -222,24 +222,24 @@ Company <input id="date_birth" name="date_birth" type="date" class="form-control
     ===.=============================================== -->
       <footer class="footer">
        <div class="container">
-          <p>Designed and built by Ramon Tenreiro. &copy; 2013-2019 </p>
+          <p>Designed and built by Ramon Tenreiro. &copy; 2013-2024 </p>
         </div>  
         </footer>
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
-    <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/bootstrap-transition.js"></script>
-    <script src="assets/js/bootstrap-alert.js"></script>
-    <script src="assets/js/bootstrap-modal.js"></script>
-    <script src="assets/js/bootstrap-dropdown.js"></script>
-    <script src="assets/js/bootstrap-scrollspy.js"></script>
-    <script src="assets/js/bootstrap-tab.js"></script>
-    <script src="assets/js/bootstrap-tooltip.js"></script>
-    <script src="assets/js/bootstrap-popover.js"></script>
-    <script src="assets/js/bootstrap-button.js"></script>
-    <script src="assets/js/bootstrap-collapse.js"></script>
-    <script src="assets/js/bootstrap-carousel.js"></script> 
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap-transition.js"></script>
+    <script src="js/bootstrap-alert.js"></script>
+    <script src="js/bootstrap-modal.js"></script>
+    <script src="js/bootstrap-dropdown.js"></script>
+    <script src="js/bootstrap-scrollspy.js"></script>
+    <script src="js/bootstrap-tab.js"></script>
+    <script src="js/bootstrap-tooltip.js"></script>
+    <script src="js/bootstrap-popover.js"></script>
+    <script src="js/bootstrap-button.js"></script>
+    <script src="js/bootstrap-collapse.js"></script>
+    <script src="js/bootstrap-carousel.js"></script> 
 </body>
 </html>
