--- a/DASH/gallery10.html
+++ b/DASH/gallery10.html
@@ -8,15 +8,15 @@
     <meta name="author" content="Ramon Tenreiro">
     <meta property='og:title' content='Ramon Tenreiro | Sharing creations with you .'/>
     <meta property='og:description' content='Architecture. Painting. Games'/>
-    <meta property='og:url' content='https://www.tenreiros.com'/>
+    <meta property='og:url' content='https://rtenreiro.github.io/'/>
     <meta property='og:site_name' content='Ramon Tenreiro'/>
     <meta property='og:type' content='website'/>
 
     <!-- Le styles -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="assets/css/docs.css" rel="stylesheet">
-    <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="css/docs.css" rel="stylesheet">
+    <link href="js/google-code-prettify/prettify.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -27,8 +27,8 @@
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">-->
-    <link rel="apple-touch-icon-precomposed" href="images/favicon32.png">
-    <link rel="shortcut icon" href="images/favicon32.png">
+    <link rel="apple-touch-icon-precomposed" href="img/favicon32.png">
+    <link rel="shortcut icon" href="img/favicon32.png">
   </head>
   <body data-spy="scroll" data-target=".bs-docs-sidebar">
   <div class="container" align="center">
@@ -37,7 +37,7 @@
         ================================================== -->
         <section id="global">
           
-        <img src="Imagenes/painting/600PSalon.png" alt="Family" width="600" class="img-polaroid">
+        <img src="img/600PSalon.png" alt="Family" width="600" class="img-polaroid">
           <p>Family Self-portrait - Oleo</p> 
         </section>
        </div>
@@ -45,7 +45,7 @@
     <!-- Footer
     ================================================== -->
     <footer class="footer">
-        <p>Designed and built by Ramon Tenreiro. <p>&copy; 2013-2019 </p>
+        <p>Designed and built by Ramon Tenreiro. <p>&copy; 2013-2024 </p>
     </footer>
 
 
@@ -53,19 +53,19 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
-    <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/bootstrap-transition.js"></script>
-    <script src="assets/js/bootstrap-alert.js"></script>
-    <script src="assets/js/bootstrap-modal.js"></script>
-    <script src="assets/js/bootstrap-dropdown.js"></script>
-    <script src="assets/js/bootstrap-scrollspy.js"></script>
-    <script src="assets/js/bootstrap-tab.js"></script>
-    <script src="assets/js/bootstrap-tooltip.js"></script>
-    <script src="assets/js/bootstrap-popover.js"></script>
-    <script src="assets/js/bootstrap-button.js"></script>
-    <script src="assets/js/bootstrap-collapse.js"></script>
-    <script src="assets/js/bootstrap-carousel.js"></script>
-    <script src="assets/js/bootstrap-typeahead.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap-transition.js"></script>
+    <script src="js/bootstrap-alert.js"></script>
+    <script src="js/bootstrap-modal.js"></script>
+    <script src="js/bootstrap-dropdown.js"></script>
+    <script src="js/bootstrap-scrollspy.js"></script>
+    <script src="js/bootstrap-tab.js"></script>
+    <script src="js/bootstrap-tooltip.js"></script>
+    <script src="js/bootstrap-popover.js"></script>
+    <script src="js/bootstrap-button.js"></script>
+    <script src="js/bootstrap-collapse.js"></script>
+    <script src="js/bootstrap-carousel.js"></script>
+    <script src="js/bootstrap-typeahead.js"></script>
 
 
   </body></html>
