--- a/DASH/painting.html
+++ b/DASH/painting.html
@@ -8,19 +8,19 @@
     <meta name="author" content="Ramon Tenreiro">
     <meta property='og:title' content='Ramon Tenreiro | Resume.'/>
     <meta property='og:description' content='Architecture, MBA, Resume'/>
-    <meta property='og:url' content='https://www.tenreiros.com'/>
+    <meta property='og:url' content='https://rtenreiro.github.io/'/>
     <meta property='og:site_name' content='Ramon Tenreiro'/>
     <meta property='og:type' content='website'/>
 
     <!-- Le styles -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="assets/css/docs.css" rel="stylesheet">
-    <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="css/docs.css" rel="stylesheet">
+    <link href="js/google-code-prettify/prettify.css" rel="stylesheet">
 
     <script src="https://apis.google.com/js/platform.js"></script>
    
-    <link rel="shortcut icon" href="images/favicon32.png">
+    <link rel="shortcut icon" href="img/favicon32.png">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123276280-1"></script>
 <script>
@@ -41,22 +41,16 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="">
-                <a href="https://wwww.tenreiros.com/index.html">Home</a>
+                <a href="https://rtenreiro.github.io/index.html">Home</a>
               </li>
               <li class="">
-                <a href="https://wwww.tenreiros.com/aboutme.html">About Me</a>
+                <a href="https://rtenreiro.github.io/CV/2022.html">About Me</a>
               </li>
               <li class="">
-                <a href="https://wwww.tenreiros.com/realstate.html">Real State Developer</a>
-              </li>
-              <li class="active">
-                <a href="https://wwww.tenreiros.com/painting.html">Painting</a>
+                <a href="https://rtenreiro.github.io/DASH/dash.html">Creations</a>
               </li>
               <li class="">
-                <a href="https://wwww.tenreiros.com/internet.html">Internet</a>
-              </li>
-              <li class="">
-                <a href="https://wwww.tenreiros.com/contact.html">Stay in touch</a>
+                <a href="https://rtenreiro.github.io/contact.html">Stay in touch</a>
               </li>
             </ul>
           </div>
@@ -77,66 +71,66 @@
           <div class="row-fluid">
             <div class="span3">
               <a target="_blank" href="gallery1.html">
-              <img src="Imagenes/painting/600PAmsterdam.png" alt="Amsterdam" width="150" height="100" class="img-polaroid"></a>
+              <img src="img/600PAmsterdam.png" alt="Amsterdam" width="150" height="100" class="img-polaroid"></a>
               <p>Amsterdarm - Oleo</p>
             </div><!--/span-->
             <div class="span3">
               <a target="_blank" href="gallery2.html">
-              <img src="Imagenes/painting/72PBarco.png" alt="Ship" width="150" height="100"class="img-polaroid"></a>
+              <img src="img/600PBarco.png" alt="Ship" width="150" height="100"class="img-polaroid"></a>
               <p>Ana Summer - Oleo </p>
             </div><!--/span-->
             <div class="span3">
               <a target="_blank" href="gallery3.html">
-              <img src="Imagenes/painting/72PBrugges.png" alt="Brugges" width="150" height="100"class="img-polaroid"></a>
+              <img src="img/600PBrugges.png" alt="Brugges" width="150" height="100"class="img-polaroid"></a>
               <p>Brugges - Oleo </p>
             </div><!--/span-->
             <div class="span3">
               <a target="_blank" href="gallery4.html">
-               <img src="Imagenes/painting/72PCABANAS.png" alt="Ana" width="150" height="100"class="img-polaroid"></a>
+               <img src="img/600PCABANAS.png" alt="Ana" width="150" height="100"class="img-polaroid"></a>
               <p>Ana - Water Color </p>
             </div><!--/span-->
           </div><!--/row-->
           <div class="row-fluid">
             <div class="span3">
               <a target="_blank" href="gallery5.html">
-              <img src="Imagenes/painting/72PGant.png" alt="Gant" width="150" height="100" class="img-polaroid"></a>
+              <img src="img/600PGant.png" alt="Gant" width="150" height="100" class="img-polaroid"></a>
               <p>Gant - Oleo</p>
             </div><!--/span-->
             <div class="span3">
               <a target="_blank" href="gallery6.html">
-              <img src="Imagenes/painting/150painting.fw.png" alt="Lisboa" width="150" height="100"class="img-polaroid"></a>
+              <img src="img/600PLisboa.png" alt="Lisboa" width="150" height="100"class="img-polaroid"></a>
               <p>Lisboa -  Oleo </p>
             </div><!--/span-->
             <div class="span3">
               <a target="_blank" href="gallery7.html">
-               <img src="Imagenes/painting/72PLoropark.png" alt="Loropark" width="150" height="100"class="img-polaroid"></a>
+               <img src="img/600PLoropark.png" alt="Loropark" width="150" height="100"class="img-polaroid"></a>
               <p>Tenerife - Water color  </p>
             </div><!--/span-->
             <div class="span3">
              <a target="_blank" href="gallery8.html">
-               <img src="Imagenes/painting/72POpera.png" alt="Opera" width="150" height="100"class="img-polaroid"></a>
+               <img src="img/600POpera.png" alt="Opera" width="150" height="100"class="img-polaroid"></a>
               <p>Opera Madrid - Water color </p>
             </div><!--/span-->
           </div><!--/row-->
           <div class="row-fluid">  
             <div class="span3">
               <a target="_blank" href="gallery9.html">
-               <img src="Imagenes/painting/72PParis.png" alt="Paris" width="150" height="100" class="img-polaroid"></a>
+               <img src="img/600PParis.png" alt="Paris" width="150" height="100" class="img-polaroid"></a>
               <p>Paris - Oleo</p>
             </div><!--/span-->
             <div class="span3">
                <a target="_blank" href="gallery10.html">
-                <img src="Imagenes/painting/72PSalon.png" alt="Family" width="150" height="100" class="img-polaroid"></a>
+                <img src="img/600PSalon.png" alt="Family" width="150" height="100" class="img-polaroid"></a>
               <p>Self-portrait - Oleo </p>
             </div><!--/span-->
             <div class="span3">
               <a target="_blank" href="gallery11.html">
-               <img src="Imagenes/painting/72PTerraza.png" alt="Balcony" width="150" height="100"class="img-polaroid"></a>
+               <img src="img/600PTerraza.png" alt="Balcony" width="150" height="100"class="img-polaroid"></a>
               <p>Balcony - Oleo </p>
             </div><!--/span-->
             <div class="span3">
               <a target="_blank" href="gallery12.html">
-                <img src="Imagenes/painting/72PVista.png" alt="Segovia" width="150" height="100"class="img-polaroid"></a>
+                <img src="img/600PVista.png" alt="Segovia" width="150" height="100"class="img-polaroid"></a>
               <p>Ana - Water Color </p>
             </div><!--/span-->
     </div>
@@ -144,7 +138,7 @@
     ================================================== -->
     <footer class="footer">
       <div class="container">
-        <p>Designed and built by Ramon Tenreiro. <p>&copy; 2013-2019 </p>
+        <p>Designed and built by Ramon Tenreiro. <p>&copy; 2013-2024 </p>
       </div>
     </footer>
 
@@ -153,17 +147,17 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
-    <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/bootstrap-transition.js"></script>
-    <script src="assets/js/bootstrap-alert.js"></script>
-    <script src="assets/js/bootstrap-modal.js"></script>
-    <script src="assets/js/bootstrap-dropdown.js"></script>
-    <script src="assets/js/bootstrap-scrollspy.js"></script>
-    <script src="assets/js/bootstrap-tab.js"></script>
-    <script src="assets/js/bootstrap-tooltip.js"></script>
-    <script src="assets/js/bootstrap-popover.js"></script>
-    <script src="assets/js/bootstrap-button.js"></script>
-    <script src="assets/js/bootstrap-collapse.js"></script>
-    <script src="assets/js/bootstrap-carousel.js"></script>
-    <script src="assets/js/bootstrap-typeahead.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap-transition.js"></script>
+    <script src="js/bootstrap-alert.js"></script>
+    <script src="js/bootstrap-modal.js"></script>
+    <script src="js/bootstrap-dropdown.js"></script>
+    <script src="js/bootstrap-scrollspy.js"></script>
+    <script src="js/bootstrap-tab.js"></script>
+    <script src="js/bootstrap-tooltip.js"></script>
+    <script src="js/bootstrap-popover.js"></script>
+    <script src="js/bootstrap-button.js"></script>
+    <script src="js/bootstrap-collapse.js"></script>
+    <script src="js/bootstrap-carousel.js"></script>
+    <script src="js/bootstrap-typeahead.js"></script>
   </body><//html>
