--- a/DASH/dash.html
+++ b/DASH/dash.html
@@ -11,7 +11,7 @@
     <meta property='og:url' content='https://rtenreiro.github.io/'/>
     <meta property='og:site_name' content='Ramon Tenreiro'/>
     <meta property='og:type' content='website'/>
-        <script src="dash.php"></script> <!-- control -->
+        <!-- control -->
         <link rel="shortcut icon" href="img/favicon32.png">
         <link href="css/style.default.css" rel="stylesheet">
 
