--- a/DASH/dash.html
+++ b/DASH/dash.html
@@ -49,7 +49,6 @@
                             <ul class="dropdown-menu pull-right" role="menu">
                <li><a href="https://rtenreiro.github.io/"><i class="glyphicon glyphicon-home"></i> Home</a></li>
                <li><a href="https://rtenreiro.github.io/CV/2022RT.html"><i class="glyphicon glyphicon-user"></i>About me</a></li>  
-               <li class="divider"></li>
                <li><a href="https://rtenreiro.github.io/contact.html"><i class="glyphicon glyphicon-envelope"></i>Stay in Touch</a></li>
                             </ul>
                         </div><!-- btn-group -->
@@ -131,7 +130,7 @@
                         <!-- CONTENT GOES HERE -->  
                     <div class="contentpanel"> 
                   <iframe src="painting.html" frameborder="0" id="fra" width="100%" height="800"></iframe>
-                  <!--  <object name="fra" width="900" height="600" data="https://www.tenreiros.com/painting.html"></object> -->
+                  <!--  <object name="fra" width="900" height="600" data="painting.html"></object> -->
                     </div><!-- contentpanel -->
                     
                 </div>
