--- a/DASH/dash.html
+++ b/DASH/dash.html
@@ -60,14 +60,14 @@
             </div><!-- headerwrapper -->
         </header>
         
-        <section>
-            <div class="mainwrapper">
-                <div class="leftpanel">
-                    <h5 class="leftpanel-title" style="margin-top:40px">Cosas a hacer</h5>
-                    <ul class="nav nav-pills nav-stacked">
-                        <li><a href="https://rtenreiro.github.io/"><i class="fa fa-home"></i> <span>Home</span></a></li>
-                       </a></li>
-                        <li class="parent"><a href=""><i class="fa fa-image"></i> <span>Painting</span></a>
+        <section> 
+       <div class="mainwrapper"> 
+         <div class="leftpanel">
+                    <h3 class="leftpanel-title" style="margin-top:40px">Cosas a hacer</h3>
+<ul class="nav nav-pills nav-stacked">
+<li><a href="https://rtenreiro.github.io/"><i class="fa fa-home"></i> <span>Home</span></a></li></a></li>
+           
+<li class="parent"><a href=""><i class="fa fa-image"></i> <span>Painting</span></a>
                             <ul class="children">
  <li><a href="#" onclick="document.getElementById('fra').src = 'gallery1.html'">Amsterdam - oleo</a></li>
  <li><a href="#" onclick="document.getElementById('fra').src = 'gallery2.html'">Ana Summer - oleo</a></li>
@@ -83,7 +83,7 @@
  <li><a href="#" onclick="document.getElementById('fra').src = 'gallery12.html'">Segovia - oleo</a></li>
                             </ul>
                         </li>
-                        <li class="parent"><a href=""><i class="fa fa-gamepad"></i> <span>Games</span></a>
+<li class="parent"><a href=""><i class="fa fa-gamepad"></i> <span>Games</span></a>
                             <ul class="children">
  <li><a href="#" onclick="document.getElementById('fra').src = 'CowGame.html'">Tenreiros - Flash</a></li>
  <li><a href="#" onclick="document.getElementById('fra').src = 'ASTE.html'">Asteroides - Javascript</a></li>
@@ -95,10 +95,9 @@
                       <ul class="children">
  <li><a href="#" onclick="document.getElementById('fra').src = 'building.html'">Building</a></li>
  <li><a href="#" onclick="document.getElementById('fra').src = 'architecture.html'">Architecture</a></li>
-
-
                       </ul></li>
-                        <li class="parent active"><a href=""><i class="fa fa-file-text"></i> <span>Newletters</span></a>
+
+<li class="parent active"><a href=""><i class="fa fa-file-text"></i> <span>Newletters</span></a>
                             <ul class="children">
 <li><a href="#" onclick="document.getElementById('fra').src = 'NL2.html'">NL2-WEB</a></li>
 <li><a href="#" onclick="document.getElementById('fra').src = 'NL1.html'">NL1-ATB</a></li>
@@ -136,8 +135,6 @@
                 </div>
             </div><!-- mainwrapper -->
         </section>
-
-
         <script src="js/jquery-1.11.1.min.js"></script>
         <script src="js/jquery-migrate-1.2.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
@@ -145,7 +142,6 @@
         <script src="js/pace.min.js"></script>
         <script src="js/retina.min.js"></script>
         <script src="js/jquery.cookies.js"></script>
-
         <script src="js/custom.js"></script>
 
     </body>
