--- a/DASH/dash.html
+++ b/DASH/dash.html
@@ -83,14 +83,16 @@
  <li><a href="#" onclick="document.getElementById('fra').src = 'gallery12.html'">Segovia - oleo</a></li>
                             </ul>
                         </li>
+  
 <li class="parent"><a href=""><i class="fa fa-gamepad"></i> <span>Games</span></a>
                             <ul class="children">
  <li><a href="#" onclick="document.getElementById('fra').src = 'CowGame.html'">Tenreiros - Flash</a></li>
  <li><a href="#" onclick="document.getElementById('fra').src = 'ASTE.html'">Asteroides - Javascript</a></li>
  <li><a href="#" onclick="document.getElementById('fra').src = 'blackjack.php'">BlackJack - Multijugador</a></li>
- <li><a href="#" onclick="document.getElementById('fra').src = 'MUSS.php'">Mus - Javascript</a></li                              
+ <li><a href="#" onclick="document.getElementById('fra').src = 'MUSS.php'">Mus - Javascript</a></li>                             
                            </ul>
                         </li>
+  
 <li class="parent"><a href=""><i class="fa fa-building"></i><span>Real Estate Developer</span></a>
                       <ul class="children">
  <li><a href="#" onclick="document.getElementById('fra').src = 'building.html'">Building</a></li>
