--- a/DASH/painting.html
+++ b/DASH/painting.html
@@ -35,77 +35,74 @@
 ================================================== -->
 <header class="jumbotron subhead" id="overview">
   <div class="container">
-    <h1>Painting</h1>
-    <p class="lead">by Ramon Tenreiro.</p>
+    <h1>  Painting</h1>
+    <p class="lead">  by Ramon Tenreiro.</p>
   </div>
 </header>
   <div class="container"> 
             <p><italic>I have been painting since I was about eight years old -in those endless summers in Esteiro- and I do it to please myself. My inner world becomes the stage with which I can observe and learn to understand. It expresses what is going on inside of me and the way I view the world.<br>I have eyes for colors. I can see the beauty of the world around me. This perfect beauty, could only be given to us by God. Therefore, for me painting is like praying. Expressing what I see through my.</italic></p>
           <div class="row-fluid">
-            <div class="span3">
-              <a target="_blank" href="gallery1.html">
-              <img src="img/600PAmsterdam.png" alt="Amsterdam" width="300" height="200" class="img-polaroid"></a>
-              <p>Amsterdarm - Oleo</p>
-            </div><!--/span-->
-            <div class="span3">
-              <a target="_blank" href="gallery2.html">
-              <img src="img/600PBarco.png" alt="Ship" width="300" height="200" class="img-polaroid"></a>
-              <p>Ana Summer - Oleo </p>
-            </div><!--/span-->
-            <div class="span3">
-              <a target="_blank" href="gallery3.html">
-              <img src="img/600PBrugges.png" alt="Brugges" width="300" height="200" class="img-polaroid"></a>
-              <p>Brugges - Oleo </p>
-            </div><!--/span-->
-            <div class="span3">
-              <a target="_blank" href="gallery4.html">
-               <img src="img/600PCABANAS.png" alt="Ana" width="300" height="200" class="img-polaroid"></a>
-              <p>Ana - Water Color </p>
-            </div><!--/span-->
-          </div><!--/row-->
-          <div class="row-fluid">
-            <div class="span3">
-              <a target="_blank" href="gallery5.html">
-              <img src="img/600PGant.png" alt="Gant" width="300" height="200" class="img-polaroid"></a>
-              <p>Gant - Oleo</p>
-            </div><!--/span-->
-            <div class="span3">
-              <a target="_blank" href="gallery6.html">
-              <img src="img/600PLisboa.png" alt="Lisboa" width="300" height="200" class="img-polaroid"></a>
-              <p>Lisboa -  Oleo </p>
-            </div><!--/span-->
-            <div class="span3">
-              <a target="_blank" href="gallery7.html">
-               <img src="img/600PLoropark.png" alt="Loropark" width="300" height="200" class="img-polaroid"></a>
-              <p>Tenerife - Water color  </p>
-            </div><!--/span-->
-            <div class="span3">
-             <a target="_blank" href="gallery8.html">
-               <img src="img/600POpera.png" alt="Opera" width="300" height="200" class="img-polaroid"></a>
-              <p>Opera Madrid - Water color </p>
-            </div><!--/span-->
-          </div><!--/row-->
-          <div class="row-fluid">  
-            <div class="span3">
-              <a target="_blank" href="gallery9.html">
-               <img src="img/600PParis.png" alt="Paris" width="300" height="200" class="img-polaroid"></a>
-              <p>Paris - Oleo</p>
-            </div><!--/span-->
-            <div class="span3">
-               <a target="_blank" href="gallery10.html">
-                <img src="img/600PSalon.png" alt="Family" width="300" height="200" class="img-polaroid"></a>
-              <p>Self-portrait - Oleo </p>
-            </div><!--/span-->
-            <div class="span3">
-              <a target="_blank" href="gallery11.html">
-               <img src="img/600PTerraza.png" alt="Balcony" width="300" height="200" class="img-polaroid"></a>
-              <p>Balcony - Oleo </p>
-            </div><!--/span-->
-            <div class="span3">
-              <a target="_blank" href="gallery12.html">
-                <img src="img/600PVista.png" alt="Segovia" width="300" height="200" class="img-polaroid"></a>
-              <p>Ana - Water Color </p>
-            </div><!--/span-->
+<div class="container" align="center">
+        <section id="global">
+          <img src="img/600PAmsterdam.png" alt="Amsterdam" width="600" class="img-polaroid">
+          <p>Amsterdarm - Oleo </p> 
+        </section>
+</div>
+<div class="container" align="center">
+        <section id="global">
+          <img src="img/600PBarco.png" alt="Ship" width="600" class="img-polaroid">
+          <p>Ana Summer - Oleo - Oleo </p> 
+        </section>
+</div>
+<div class="container" align="center">
+        <section id="global">
+          <img src="img/600PBrugges.png" alt="Brugges" width="600" class="img-polaroid">
+          <p>Brugges - Oleo </p> 
+        </section>
+</div>            
+<div class="container" align="center">
+        <section id="global">
+        <img src="img/600PCABANAS.png" alt="Ana" width="600"  class="img-polaroid"></a>
+        <p>Ana - Water Color </p>
+        </section>
+</div>                      
+ <div class="container" align="center">
+        <section id="global">
+        <img src="img/600PGant.png" alt="Gant" width="600" class="img-polaroid"></a>
+        <p>Gant - Oleo</p>
+        </section>
+</div>                
+<div class="container" align="center">
+        <section id="global">
+        <img src="img/600PLisboa.png" alt="Lisboa" width="600" class="img-polaroid"></a>
+        <p>Lisboa -  Oleo </p>
+        </section>
+</div>                           
+<div class="container" align="center">
+        <section id="global">
+         <img src="img/600PParis.png" alt="Paris" width="600" class="img-polaroid"></a>
+         <p>Paris - Oleo</p>
+        </section>
+</div>                        
+<div class="container" align="center">
+        <section id="global">
+         <img src="img/600PSalon.png" alt="Family" width="600" class="img-polaroid"></a>
+          <p>Self-portrait - Oleo </p>
+        </section>
+</div>                         
+<div class="container" align="center">
+        <section id="global">
+         <img src="img/600PTerraza.png" alt="Balcony" width="600" class="img-polaroid"></a>
+         <p>Balcony - Oleo </p>
+        </section>
+</div>                         
+ <div class="container" align="center">
+        <section id="global">
+         <img src="img/600PVista.png" alt="Segovia" width="600" class="img-polaroid"></a>
+              <p>Segovia - Oleo</p>
+        </section>
+</div>                     
+</div>
     </div>
     <!-- Footer
     ================================================== -->
