--- a/DASH/dash.html
+++ b/DASH/dash.html
@@ -72,10 +72,11 @@
   
 <li class="parent"><a href=""><i class="fa fa-gamepad"></i> <span>Games</span></a>
                             <ul class="children">
- <li><a href="#" onclick="document.getElementById('fra').src = 'CowGame.html'">Tenreiros - Flash</a></li>
- <li><a href="#" onclick="document.getElementById('fra').src = 'ASTE.html'">Asteroides - Javascript</a></li>
- <li><a href="#" onclick="document.getElementById('fra').src = 'blackjack.php'">BlackJack - Multijugador</a></li>
- <li><a href="#" onclick="document.getElementById('fra').src = 'MUSS.php'">Mus - Javascript</a></li>                             
+
+ <li><a href="#" onclick="document.getElementById('fra').src = 'GAMES/ASTE.html'">Asteroides - Javascript</a></li>
+ <li><a href="#" onclick="document.getElementById('fra').src = 'GAMES/blackjack.php'">BlackJack - Multijugador</a></li>
+ <li><a href="#" onclick="document.getElementById('fra').src = 'GAMES/MUSS.php'">Mus - Javascript</a></li> 
+ <li><a href="#" onclick="document.getElementById('fra').src = 'GAMES/CowGame.html'">Tenreiros - Flash</a></li>
                            </ul>
                         </li>
   
