--- a/DASH/dash.html
+++ b/DASH/dash.html
@@ -67,7 +67,7 @@
 <ul class="nav nav-pills nav-stacked">
 <li><a href="https://rtenreiro.github.io/"><i class="fa fa-home"></i> <span>Home</span></a></li></a></li>
            
-<li class="parent"><a href=""><i class="fa fa-image"></i> <span>Painting</span></a>
+<li class="parent"><a href="https://rtenreiro.github.io/DASH/dash.html"><i class="fa fa-image"></i> <span>Painting</span></a>
                                                     </li>
   
 <li class="parent"><a href=""><i class="fa fa-gamepad"></i> <span>Games</span></a>
@@ -87,7 +87,7 @@
  
                       </ul></li>
 
-<li class="parent active"><a href=""><i class="fa fa-file-text"></i> <span>Newletters</span></a>
+<li class="parent"><a href=""><i class="fa fa-file-text"></i> <span>Newletters</span></a>
                             <ul class="children">
 <li><a href="#" onclick="document.getElementById('fra').src = 'NL1.html'">NL1-ATB</a></li>
 <li><a href="#" onclick="document.getElementById('fra').src = 'NL2.html'">NL2-WEB</a></li>
