--- a/DASH/painting.html
+++ b/DASH/painting.html
@@ -34,29 +34,29 @@
 <!-- Subhead
 ================================================== -->
 <header class="jumbotron subhead" id="overview">
-  <div class="container">
-    <h1>  Painting</h1>
+  <div class="container" align="center>
+    <h1>Painting</h1>
     <p class="lead">  by Ramon Tenreiro.</p>
   </div>
 </header>
   <div class="container"> 
-            <p><italic>I have been painting since I was about eight years old -in those endless summers in Esteiro- and I do it to please myself. My inner world becomes the stage with which I can observe and learn to understand. It expresses what is going on inside of me and the way I view the world.<br>I have eyes for colors. I can see the beauty of the world around me. This perfect beauty, could only be given to us by God. Therefore, for me painting is like praying. Expressing what I see through my.</italic></p>
+            <h5>I have been painting since I was about eight years old -in those endless summers in Esteiro- and I do it to please myself. My inner world becomes the stage with which I can observe and learn to understand. It expresses what is going on inside of me and the way I view the world.<br>I have eyes for colors. I can see the beauty of the world around me. This perfect beauty, could only be given to us by God. Therefore, for me painting is like praying. Expressing what I see through my.</h5>
           <div class="row-fluid">
 <div class="container" align="center">
         <section id="global">
-          <img src="img/600PAmsterdam.png" alt="Amsterdam" width="600" class="img-polaroid">
+          <img src="img/600PAmsterdam.png" alt="Amsterdam" width="100%" class="img-polaroid">
           <p>Amsterdarm - Oleo </p> 
         </section>
 </div>
 <div class="container" align="center">
         <section id="global">
-          <img src="img/600PBarco.png" alt="Ship" width="600" class="img-polaroid">
+          <img src="img/600PBarco.png" alt="Ship" width="100%" class="img-polaroid">
           <p>Ana Summer - Oleo - Oleo </p> 
         </section>
 </div>
 <div class="container" align="center">
         <section id="global">
-          <img src="img/600PBrugges.png" alt="Brugges" width="600" class="img-polaroid">
+          <img src="img/600PBrugges.png" alt="Brugges" width="100%" class="img-polaroid">
           <p>Brugges - Oleo </p> 
         </section>
 </div>            
@@ -68,47 +68,40 @@
 </div>                      
  <div class="container" align="center">
         <section id="global">
-        <img src="img/600PGant.png" alt="Gant" width="600" class="img-polaroid"></a>
+        <img src="img/600PGant.png" alt="Gant" width="100%" class="img-polaroid"></a>
         <p>Gant - Oleo</p>
         </section>
 </div>                
 <div class="container" align="center">
         <section id="global">
-        <img src="img/600PLisboa.png" alt="Lisboa" width="600" class="img-polaroid"></a>
+        <img src="img/600PLisboa.png" alt="Lisboa" width="100%" class="img-polaroid"></a>
         <p>Lisboa -  Oleo </p>
         </section>
 </div>                           
 <div class="container" align="center">
         <section id="global">
-         <img src="img/600PParis.png" alt="Paris" width="600" class="img-polaroid"></a>
+         <img src="img/600PParis.png" alt="Paris" width="100%" class="img-polaroid"></a>
          <p>Paris - Oleo</p>
         </section>
 </div>                        
 <div class="container" align="center">
         <section id="global">
-         <img src="img/600PSalon.png" alt="Family" width="600" class="img-polaroid"></a>
+         <img src="img/600PSalon.png" alt="Family" width="100%" class="img-polaroid"></a>
           <p>Self-portrait - Oleo </p>
         </section>
 </div>                         
 <div class="container" align="center">
         <section id="global">
-         <img src="img/600PTerraza.png" alt="Balcony" width="600" class="img-polaroid"></a>
+         <img src="img/600PTerraza.png" alt="Balcony" width="100%" class="img-polaroid"></a>
          <p>Balcony - Oleo </p>
         </section>
 </div>                         
  <div class="container" align="center">
         <section id="global">
-         <img src="img/600PVista.png" alt="Segovia" width="600" class="img-polaroid"></a>
+         <img src="img/600PVista.png" alt="Segovia" width="100%" class="img-polaroid"></a>
               <p>Segovia - Oleo</p>
         </section>
 </div>                     
 </div>
     </div>
-    <!-- Footer
-    ================================================== -->
-    <footer class="footer">
-      <div class="container"> 
-        <p>Designed and built by Ramon Tenreiro. <p> &copy; 2013-2024 </p>
-      </div>
-    </footer>
   </body><//html>
