--- a/DASH/architecture.html
+++ b/DASH/architecture.html
@@ -32,34 +32,9 @@
   </head>
   <body data-spy="scroll" data-target=".bs-docs-sidebar">
 
-<!-- Navbar ================================================== -->
- <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">        
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
- 			<span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="index.html" style="color:#FFF">Ramón Tenreiro</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="">
-                <a href="https://rtenreiro.github.io/CV/2022.html">About me</a>
-              </li>
-			  <li class="">
-                <a href="https://rtenreiro.github.io/DASH/dash.html">Things I made</a>
-              </li>
-              <li class="">
-                <a href="https://rtenreiro.github.io//contact.html">Stay in Touch</a>
-              </li>
-            </ul>
-          </div> 
-        </div>
-      </div><!-- nave-->
-    </div>
-<!-- Subhead ================================================== -->
-<header class="jumbotron subhead" id="overview">
+<header class="jumbotron subhead align="justify id="overview">
     <h1>Architecture</h1>
+	<h3> by Ramón Tenreiro</h3>
 </header>
 
   <div class="container" align="justify">
@@ -69,36 +44,9 @@
         <section id="global">
           <p>I grew up in architecture, my grandfather and my father are architects too. Since I can remember, I have always looked at the buildings, gardens, cities. Although I like the modern architecture, I love the timeless architecture. Looking deep in myself, I'm loving the true beauty that time doesn't wither. This gif shows you some of the spaces that I have created  afther that I have fed it with my heart.</p>
 <div class="container" align="center">
-          <img src= "img/architectureGIFANIMADO.gif" alt= "architecture" width= "600" height= "450" class= "aligncenter" class= "img-polaroid"/>
+          <img src= "img/architectureGIFANIMADO.gif" alt= "architecture" width= "100%" class= "aligncenter" class= "img-polaroid"/>
           <p>Principal duplex -  Plaza Isaac Diaz Pardo 2 - Ferrol </p> 
         </section>
       </div>
       </div>
-
-    <!-- Footer
-    ================================================== -->
-    <footer class="footer">
-      <div class="container">
-        <p>Designed and built by Ramon Tenreiro. <p>&copy; 2014-2024 </p>
-      </div>
-    </footer>
-
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap-transition.js"></script>
-    <script src="js/bootstrap-alert.js"></script>
-    <script src="js/bootstrap-modal.js"></script>
-    <script src="js/bootstrap-dropdown.js"></script>
-    <script src="js/bootstrap-scrollspy.js"></script>
-    <script src="js/bootstrap-tab.js"></script>
-    <script src="js/bootstrap-tooltip.js"></script>
-    <script src="js/bootstrap-popover.js"></script>
-    <script src="js/bootstrap-button.js"></script>
-    <script src="js/bootstrap-collapse.js"></script>
-    <script src="js/bootstrap-carousel.js"></script>
-    <script src="js/bootstrap-typeahead.js"></script>
   </body></html>
