--- a/DASH/dash.html
+++ b/DASH/dash.html
@@ -49,7 +49,7 @@
                             <ul class="dropdown-menu pull-right" role="menu">
                <li><a href="https://rtenreiro.github.io/"><i class="glyphicon glyphicon-home"></i> Home</a></li>
                <li><a href="https://rtenreiro.github.io/CV/2022RT.html"><i class="glyphicon glyphicon-user"></i>About me</a></li>  
-               <li><a href="https://rtenreiro.github.io/contact.html"><i class="glyphicon glyphicon-envelope"></i>Stay in Touch</a></li>
+               <li><a href="https://rtenreiro.github.io/DASH/contact.html"><i class="glyphicon glyphicon-envelope"></i>Stay in Touch</a></li>
                             </ul>
                         </div><!-- btn-group -->
                         
