--- a/DASH/contact.html
+++ b/DASH/contact.html
@@ -17,8 +17,8 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
     <link href="css/docs.css" rel="stylesheet">
-    <link href="js/google-code-prettify/prettify.css" rel="stylesheet">
-    <link rel="apple-touch-icon-precomposed" href="images/favicon32.png">
+    <link href="css/prettify.css" rel="stylesheet">
+    <link rel="apple-touch-icon-precomposed" href="img/favicon32.png">
     <link rel="shortcut icon" href="img/favicon32.png">
 <style css>
 /* contact form
@@ -134,7 +134,7 @@ font-size: 18px;
     $message = $_POST['message'];
     $from = 'From: $email'; 
     $to = 'tenreiroramon@gmail.com'; 
-    $subject = 'From www.tenreiros.com';
+    $subject = 'From rtenreiro.github.io';
     $human = $_POST['human'];
 			
     $body = "From: $name\n E-Mail: $email\n Message:\n $message";
@@ -169,12 +169,6 @@ function validacion(){
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="index.html">Ramon Tenreiro </a><a href="contactes.html" title="Español"><img src="images/sp.jpg" alt="es" width="16" height="11">      </a><img src="images/us16.jpg"alt="en" width="16" height="11">
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="">
@@ -210,9 +204,6 @@ function validacion(){
 First name <input id="first_name" name="first_name" type="text" class="form-control">
 Name <input id="name" name="name" type="text" class="form-control">
 Email <input id="email" name="email" type="email" class="form-control" placeholder="example@email.com">
-Language <select id="language" name="language" class="form-control">
-<option value="1">English</option>
-<option value="4">Español</option>
 </select>
 Company <input id="date_birth" name="date_birth" type="date" class="form-control">
 <br><div style="text-align:center;">
