--- a/DASH/contact.html
+++ b/DASH/contact.html
@@ -128,7 +128,7 @@ aside h3 {
 font-size: 18px;
 }
 </style>
-<? sendEmail.php
+<? sendemail.php
     $name = $_POST['name'];
     $email = $_POST['email'];
     $message = $_POST['message'];
