--- a/DASH/GAMES/CowGame.html
+++ b/DASH/GAMES/CowGame.html
@@ -185,9 +185,20 @@ function updateScore(delta) {
         }
     </script>
 
+	  
 </head>
 <div class="container" align="center">
 <body onload="init();" style="background-color:#D4D4D4">
+	<header class="jumbotron subhead" id="overview">
+    <h1>COW GAME</h1>
+</header>
+
+  <div class="container" align="justify">
+
+        <!-- Global settings
+        ================================================== -->
+        <section id="global">
+          <h5>I created this game in Flash and then migrated it to HTML5 and made it playable through JavaScript (credits Grant Skinner). We witnessed a terrible vision of cows (Tenreiros) in an air attack using balloons. We will have to click on them with the mouse to avoid losing points.</h5>
 <canvas id="canvas" align="center" width="800" height="400" style="background-color:#ffffff"></canvas>
 <p> Pinche los globos con el ratón"</p>
   <!-- Footer
