--- a/DASH/painting.html
+++ b/DASH/painting.html
@@ -62,7 +62,7 @@
 </div>            
 <div class="container" align="center">
         <section id="global">
-        <img src="img/600PCABANAS.png" alt="Ana" width="600"  class="img-polaroid"></a>
+        <img src="img/600PCABANAS.png" alt="Ana" width="100%"  class="img-polaroid"></a>
         <p>Ana - Water Color </p>
         </section>
 </div>                      
