--- a/DASH/painting.html
+++ b/DASH/painting.html
@@ -40,7 +40,7 @@
   </div>
 </header>
   <div class="container"> 
-            <h3>I have been painting since I was about eight years old -in those endless summers in Esteiro- and I do it to please myself. My inner world becomes the stage with which I can observe and learn to understand. It expresses what is going on inside of me and the way I view the world.<br>I have eyes for colors. I can see the beauty of the world around me. This perfect beauty, could only be given to us by God. Therefore, for me painting is like praying. Expressing what I see through my.</h3>
+            <p>I have been painting since I was about eight years old -in those endless summers in Esteiro- and I do it to please myself. My inner world becomes the stage with which I can observe and learn to understand. It expresses what is going on inside of me and the way I view the world.<br>I have eyes for colors. I can see the beauty of the world around me. This perfect beauty, could only be given to us by God. Therefore, for me painting is like praying. Expressing what I see through my.</p>
           <div class="row-fluid">
 <div class="container" align="center">
         <section id="global">
