--- a/DASH/architecture.html
+++ b/DASH/architecture.html
@@ -32,7 +32,7 @@
   </head>
   <body data-spy="scroll" data-target=".bs-docs-sidebar">
 
-<header class="jumbotron subhead align="justify id="overview">
+<header class="jumbotron subhead align="justify" id="overview">
     <h1>Architecture</h1>
 	<h3> by Ramón Tenreiro</h3>
 </header>
