--- a/DASH/architecture.html
+++ b/DASH/architecture.html
@@ -32,7 +32,7 @@
   </head>
   <body data-spy="scroll" data-target=".bs-docs-sidebar">
 
-<header class="jumbotron subhead align="justify" id="overview">
+<header class="jumbotron subhead" align="justify" id="overview">
     <h1>Architecture</h1>
 	<h3> by Ramón Tenreiro</h3>
 </header>
@@ -44,7 +44,7 @@
         <section id="global">
           <p>I grew up in architecture, my grandfather and my father are architects too. Since I can remember, I have always looked at the buildings, gardens, cities. Although I like the modern architecture, I love the timeless architecture. Looking deep in myself, I'm loving the true beauty that time doesn't wither. This gif shows you some of the spaces that I have created  afther that I have fed it with my heart.</p>
 <div class="container" align="center">
-          <img src= "img/architectureGIFANIMADO.gif" alt= "architecture" width= "100%" class= "aligncenter" class= "img-polaroid"/>
+          <img src= "img/architectureGIFANIMADO.gif" alt= "architecture" width= "80%" class= "aligncenter" class= "img-polaroid"/>
           <p>Principal duplex -  Plaza Isaac Diaz Pardo 2 - Ferrol </p> 
         </section>
       </div>
