--- a/DASH/building.html
+++ b/DASH/building.html
@@ -30,8 +30,8 @@
     <link rel="shortcut icon" href="img/favicon32.png">
   </head>
   <body data-spy="scroll" data-target=".bs-docs-sidebar">
-<header class="jumbotron subhead" id="overview">
-  <div class="container" align="justify>
+<header class="jumbotron" align="justify"  id="overview">
+  <div class="container" align="justify" >
     <h1>Building</h1>
     <h3>by Ramón Tenreiro</h3>
   </div>
@@ -44,7 +44,7 @@
         <section id="global">
           <p>For the past 12 years, I have been building a full range of residential homes and communities. This is an example of construction of 22 apartments in Ferrol to develop an urban project called "AEI-V". The AEI-V a public square, 4 streets, 4 blocks of apartments and all of necesary facilities. This is the fourth block and it was built between March 2007 and September 2008 and it required an investment of 2,8 million euros.I assumed full responsabilities; buying land, negotiating with banks, hiring, controlling, managing, marketing and sales.</p>
         <div class="container" align="center">
-          <img src="img/BUILDING.gif" alt="Building" width="100%" class="img-polaroid">
+          <img src="img/BUILDING.gif" alt="Building" width="80%" class="img-polaroid">
           <p>Building 4th Block - Ferrol between March 2007 and September 2008</p> 
         
       </div></section></div>
