--- a/DASH/building.html
+++ b/DASH/building.html
@@ -31,7 +31,7 @@
   </head>
   <body data-spy="scroll" data-target=".bs-docs-sidebar">
 <header class="jumbotron" align="justify"  id="overview">
-  <div class="container" align="justify" >
+  <div class="container" align="center" >
     <h1>Building</h1>
     <h3>by Ramón Tenreiro</h3>
   </div>
