--- a/DASH/dash.html
+++ b/DASH/dash.html
@@ -14,6 +14,7 @@
         <!-- control -->
         <link rel="shortcut icon" href="img/favicon32.png">
         <link href="css/style.default.css" rel="stylesheet">
+        <link href="css/font-awesome.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
