--- a/DASH/dash.html
+++ b/DASH/dash.html
@@ -11,7 +11,6 @@
     <meta property='og:url' content='https://rtenreiro.github.io/'/>
     <meta property='og:site_name' content='Ramon Tenreiro'/>
     <meta property='og:type' content='website'/>
-        <script src="dash.php"></script> <!-- control -->
         <link rel="shortcut icon" href="img/favicon32.png">
         <link href="css/style.default.css" rel="stylesheet">
 
@@ -69,24 +68,11 @@
                         <li><a href="https://rtenreiro.github.io/"><i class="fa fa-home"></i> <span>Home</span></a></li>
                        </a></li>
                         <li class="parent"><a href=""><i class="fa fa-image"></i> <span>Painting</span></a>
-                            <ul class="children">
- <li><a href="#" onclick="document.getElementById('fra').src = 'gallery1.html'">Amsterdam - oleo</a></li>
- <li><a href="#" onclick="document.getElementById('fra').src = 'gallery2.html'">Ana Summer - oleo</a></li>
- <li><a href="#" onclick="document.getElementById('fra').src = 'gallery3.html'">Ana Brugges - oleo</a></li>
- <li><a href="#" onclick="document.getElementById('fra').src = 'gallery4.html'">Ana - oleo</a></li>
- <li><a href="#" onclick="document.getElementById('fra').src = 'gallery5.html'">Gant oleo</a></li>
- <li><a href="#" onclick="document.getElementById('fra').src = 'gallery6.html'">Ana Lisbon - oleo</a></li>
- <li><a href="#" onclick="document.getElementById('fra').src = 'gallery7.html'">Tenerife water color</a></li>
- <li><a href="#" onclick="document.getElementById('fra').src = 'gallery8.html'">Opera water color</a></li>
- <li><a href="#" onclick="document.getElementById('fra').src = 'gallery9.html'">Paris - oleo</a></li>
- <li><a href="#" onclick="document.getElementById('fra').src = 'gallery10.html'">Self-portrait - oleo</a></li>
- <li><a href="#" onclick="document.getElementById('fra').src = 'gallery11.html'">Balcony - oleo</a></li>
- <li><a href="#" onclick="document.getElementById('fra').src = 'gallery12.html'">Segovia - oleo</a></li>
-                            </ul>
+                           
                         </li>
                         <li class="parent"><a href=""><i class="fa fa-gamepad"></i> <span>Games</span></a>
                             <ul class="children">
- <li><a href="#" onclick="document.getElementById('fra').src = 'CowGame.html'">Tenreiros - Flash</a></li>
+ <li><a href="#" onclick="document.getElementById('fra').src = 'CG/CowGame.html'">Tenreiros - Flash</a></li>
  <li><a href="#" onclick="document.getElementById('fra').src = 'ASTE.html'">Asteroides - Javascript</a></li>
  <li><a href="#" onclick="document.getElementById('fra').src = 'blackjack.php'">BlackJack - Multijugador</a></li>
  <li><a href="#" onclick="document.getElementById('fra').src = 'MUSS.php'">Mus - Javascript</a></li                              
@@ -94,15 +80,14 @@
                         </li>
 <li class="parent"><a href=""><i class="fa fa-building"></i><span>Real Estate Developer</span></a>
                       <ul class="children">
- <li><a href="#" onclick="document.getElementById('fra').src = 'building.html'">Building</a></li>
  <li><a href="#" onclick="document.getElementById('fra').src = 'architecture.html'">Architecture</a></li>
-
-
+ <li><a href="#" onclick="document.getElementById('fra').src = 'building.html'">Building</a></li>
                       </ul></li>
                         <li class="parent active"><a href=""><i class="fa fa-file-text"></i> <span>Newletters</span></a>
                             <ul class="children">
-<li><a href="#" onclick="document.getElementById('fra').src = 'NL2.html'">NL2-WEB</a></li>
+
 <li><a href="#" onclick="document.getElementById('fra').src = 'NL1.html'">NL1-ATB</a></li>
+<li><a href="#" onclick="document.getElementById('fra').src = 'NL2.html'">NL2-WEB</a></li>
 ></li>
                             </ul>
                         </li>
@@ -131,7 +116,7 @@
                         <!-- CONTENT GOES HERE -->  
                     <div class="contentpanel"> 
                   <iframe src="painting.html" frameborder="0" id="fra" width="100%" height="800"></iframe>
-                  <!--  <object name="fra" width="900" height="600" data="https://www.tenreiros.com/painting.html"></object> -->
+                  <!--  <object name="fra" width="900" height="600" data="painting.html"></object> -->
                     </div><!-- contentpanel -->
                     
                 </div>
