--- a/DASH/dash.html
+++ b/DASH/dash.html
@@ -68,12 +68,7 @@
                         <li class="parent"><a href=""><i class="fa fa-gamepad"></i> <span>Games</span></a>
                             <ul class="children">
  <li><a href="#" onclick="document.getElementById('fra').src = 'CG/CowGame.html'">Tenreiros - Flash</a></li>
- <li><a href="#" onclick="document.getElementById('fra').src = 'https://tenreiros.com/ASTE.html'">Asteroides - Javascript</a></li>
- <li><a href="#" onclick="document.getElementById('fra').src = 'https://tenreiros.com/AREN.html'">Arena - Javascript</a></li>
- <li><a href="#" onclick="document.getElementById('fra').src = 'https://tenreiros.com/blackjack.php'">BlackJack - Multijugador</a></li>
- <li><a href="#" onclick="document.getElementById('fra').src = 'https://tenreiros.com/MUSS.php'">Mus - Javascript</a></li>
- <li><a href="#" onclick="document.getElementById('fra').src = 'https://tenreiros.com/BJS.html'">BlackJack - Javascript</a></li>
- <li><a href="#" onclick="document.getElementById('fra').src = 'https://tenreiros.com/game.html'">Python's Games</a></li>
+ <li><a href="#" onclick="document.getElementById('fra').src = 'GAME/game.html'">Python's Games</a></li>
                                 
                            </ul>
                         </li>
